# hatctl

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: homebrew.md
examples/: plugin_example.py
skills/ansible/: SKILL.md
skills/code-review/: SKILL.md
skills/favro/: SKILL.md
skills/github/: SKILL.md
skills/gitlab/: SKILL.md
skills/helm/: SKILL.md
skills/jira/: SKILL.md
skills/kubernetes/: SKILL.md
skills/terraform/: SKILL.md
src/ctx/: __init__.py  cli.py  config.py  repos.py  secrets.py  shell.py  skills.py  state.py
src/hat/: __init__.py  activity_log.py  cli.py  cli_config.py  cli_inspect.py  cli_net.py  cli_repos.py  cli_secret.py  cli_ssh.py  cli_tools.py  cli_vpn.py  cli_whatsup.py  common.py  config.py  doctor.py  env_builder.py  kubeconfig.py  migrate.py  net.py  notify.py  output.py  platform.py  (+11 more)
templates/: projects-claude.md
tests/: test_activity_log.py  test_cli.py  test_cli_full.py  test_common.py  test_config.py  test_config_commands.py  test_doctor.py  test_env_builder.py  test_integration.py  test_kubeconfig.py  test_migrate.py  test_module_apps.py  test_module_browser.py  test_module_cloud.py  test_module_dns.py  test_module_docker.py  test_module_env.py  test_module_git.py  test_module_hosts.py  test_module_proxy.py  test_module_ssh.py  test_module_tools.py  test_module_vpn.py  test_modules_base.py  test_net.py  test_notify.py  test_repos.py  test_secrets.py  test_shell.py  test_skills.py  test_skills_content.py  test_ssh_hosts.py  test_state.py  test_tunnel.py  test_validate.py
(+26 files in other folders)
